# zarrtraj

./: .codecov.yml  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.json  info.json  pyproject.toml  readthedocs.yaml  regressions.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  draft-pdf.yml  gh-ci.yaml
PEG_1chain/: PEG.prmtop
benchmarks/: __init__.py  asv.conf.json  benchmarks.py  environment.yaml  environment.yml  reader_bms.py  test_env.yaml  tmp.py
devtools/conda-envs/: asv_env.yaml  test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  benchmarks.rst  citation.rst  conf.py  getting_started.rst  index.rst  installation.rst  performance_considerations.rst  walkthrough.rst  yiip_example.rst
docs/source/autosummary/: zarrtraj.ZARRTRAJ.rst
docs/source/zarrmd-file-spec/: v0.1.0.rst  v0.2.0.rst
docs/source/zarrtraj-file-spec/: v0.1.0.rst  v1.rst
examples/: rmsd_yiip.ipynb
gh_actions_debug/: moto_s3_contents.py  run_moto.py
graphs/summary/: reader_bms.H5MDFmtAWSRMSFTime.time_rmsf.json  reader_bms.H5MDFmtDiskRMSFTime.time_rmsf.json  reader_bms.H5MDReadersDiskStrideTime.time_strides.json  reader_bms.TrajReaderAWSBenchmarks.time_strides.json  reader_bms.TrajReaderDiskBenchmarks.time_strides.json  reader_bms.ZARRH5MDDiskStrideTime.time_strides.json  reader_bms.ZARRH5MDS3StrideTime.time_strides.json
joss_paper/: figure_1.ipynb  figure_2.ipynb  paper.bib  paper.md
notebooks/: align_setup.ipynb  align_write_benchmark.ipynb  benchmark_setup.ipynb  cloud_benchmarking.ipynb  cloud_disk_others.ipynb  format.ipynb  format_comparison_benchmark.ipynb  initial_benchmark.ipynb  rmsd.ipynb  rmsf.ipynb  write_benchmark_setup.ipynb  writing.ipynb  yiip_benchmark.ipynb
notebooks/raw_zarr_benchmarks/: filesize_compressed_filtered.ipynb
notebooks/zarrtraj_benchmarks/: calculated_density_benchmark.ipynb  pca_benchmark.ipynb  write_benchmark_setup.ipynb
zarrtraj/: CACHE.py  ZARR.py  ZARRTRAJ.py  Zarr.py  __init__.py  benchmarking.ipynb  cache.py  format.ipynb  frameseq.py  kerchunk_link_patch.py  kerchunkdisk.py  playground.py  tmp.py  tstxrzarr.py  utils.py
zarrtraj-file-spec/: v1.rst
zarrtraj/data/: COORDINATES_MISSING_H5MD_GROUP_H5MD.h5md  COORDINATES_MISSING_TIME_DSET_H5MD.h5md  COORDINATES_SYNTHETIC_H5MD.h5md  COORDINATES_VARIED_STEPS_H5MD.h5md  create_COORDINATES_MISSING_H5MD_GROUP.py  create_COORDINATES_MISSING_TIME_DSET.py  create_COORDINATES_SYNTHETIC.py  create_COORDINATES_VARIED_STEPS.py  create_ZARRTRAJ_xvf.py  create_zarrtraj_data.py  files.py  parameterized_write.py  write_aligned_compressed_disk_h5md.py  write_aligned_compressed_disk_zarrmd.py  write_aligned_compressed_s3_h5md.py  write_aligned_compressed_s3_zarrmd.py  write_aligned_uncompressed_disk_h5md.py  write_aligned_uncompressed_disk_zarrmd.py  write_aligned_uncompressed_s3_h5md.py  write_aligned_uncompressed_s3_zarrmd.py  write_aligned_yiip_xtc.py  write_long_s3_traj.py  write_short_disk_traj.py
zarrtraj/data/COORDINATES_MISSING_H5MD_GROUP_ZARRMD.zarrmd/observables/occupancy/value/: .zarray
zarrtraj/data/COORDINATES_MISSING_TIME_DSET_ZARRMD.zarrmd/h5md/author/: .zattrs
zarrtraj/data/COORDINATES_SYNTHETIC_ZARRMD.zarrmd/h5md/creator/: .zattrs
zarrtraj/data/COORDINATES_SYNTHETIC_ZARRMD.zarrmd/particles/trajectory/box/: .zattrs
zarrtraj/data/COORDINATES_VARIED_STEPS_ZARRMD.zarrmd/h5md/: .zattrs
zarrtraj/data/cobrotoxin.zarrtraj/particles/forces/: .zarray  0.0.0
zarrtraj/data/cobrotoxin.zarrtraj/particles/positions/: 0.0.0
zarrtraj/data/cobrotoxin.zarrtraj/particles/step/: 0
zarrtraj/data/cobrotoxin.zarrtraj/particles/time/: 0
zarrtraj/data/cobrotoxin.zarrtraj/particles/units/: .zattrs
zarrtraj/data/cobrotoxin.zarrtraj/particles/velocities/: 0.0.0
zarrtraj/data/test.zarrtraj/metadata/: .zattrs
zarrtraj/data/test.zarrtraj/particles/box/: .zattrs
zarrtraj/data/test.zarrtraj/particles/forces/: .zarray  0.0.0
zarrtraj/data/test.zarrtraj/particles/positions/: 0.0.0
zarrtraj/data/test.zarrtraj/particles/time/: .zarray
zarrtraj/data/test.zarrtraj/particles/units/: .zattrs
zarrtraj/data/test.zarrtraj/particles/velocities/: 0.0.0
zarrtraj/h5files/: h5_10000_5.h5  h5_1000_5.h5  h5_10500_5.h5  h5_11000_5.h5  h5_11500_5.h5  h5_12000_5.h5  h5_12500_5.h5  h5_13000_5.h5  h5_13500_5.h5  h5_14000_5.h5  h5_14500_5.h5  h5_15000_5.h5  h5_1500_5.h5  h5_15500_5.h5  h5_16000_5.h5  h5_16500_5.h5  h5_17000_5.h5  h5_17500_5.h5  h5_18000_5.h5  h5_18500_5.h5  h5_19000_5.h5  h5_19500_5.h5  h5_20000_5.h5  h5_2000_5.h5  h5_20500_5.h5  h5_21000_5.h5  h5_21500_5.h5  h5_22000_5.h5  h5_22500_5.h5  h5_23000_5.h5  h5_23500_5.h5  h5_24000_5.h5  h5_24500_5.h5  h5_25000_5.h5  h5_2500_5.h5  h5_25500_5.h5  h5_26000_5.h5  h5_26500_5.h5  h5_27000_5.h5  h5_27500_5.h5  (+59 more)
zarrtraj/tests/:  test_zarrtraj_s3.py  conftest.py  create_zarrtraj_data.py  datafiles.py  sandbox.py  test_h5md_s3.py  test_zarrtraj.py  test_zarrtraj_disk.py  test_zarrtraj_s3.py  utils.py
(+1655 files in other folders)
