[build-system]
requires = [
  "setuptools >=61.2",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "zarrtraj"
description = "This is a kit that provides the ability to read and write trajectory data in the Zarr file format"
license = {file = "LICENSE" }
authors = [
    {name = "Lawson Woods", email = "ljwoods2@asu.edu"},
]
maintainers = [
    {name = "Lawson Woods", email = "ljwoods2@asu.edu"},
]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "MDAnalysis>=2.1.0",
    # Earliest zarr version where BaseStore has close() method
    "zarr>=2.11.0", 
    # Earliest version with preserved_linked_dsets
    "kerchunk>=0.2.6",
    # Earliest version with visititems_links
    "h5py>=3.11.0",
    "s3fs>=2024.3.0",
    "gcsfs>=2024.6.1",
    "adlfs>=2024.7.0",
    
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "MDAnalysisTests>=2.1.0",
    "moto[server]>=5.0.3",
    "pip",
    "codecov",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/ljwoods2/zarrtraj"
# documentation = "https://zarrtraj.readthedocs.io"

[tool.setuptools]
packages = ["zarrtraj"]

# Installs tests datafiles
[tool.setuptools.package-data]
"zarrtraj" = ["data/*"]

[tool.pytest.ini_options]
minversion = "7.4.0"
testpaths = [
    "zarrtraj/tests",
]

[tool.black]
line-length = 80

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.coverage.run]
omit = [
    # Omit the tests
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.yapf]
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = false

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Software Development :: Libraries :: Python Modules',
]